2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Patrick Wade <patrick.wade@sun.com>

	* at-enable-dialog.glade:
	* main.c: (create_dialog), (cb_at_preferences),
	(cb_keyboard_preferences), (cb_mouse_preferences),
	(cb_login_preferences), (setup_dialog): add button to launch mouse
	accessibility properties (bug #515078)

2008-02-09  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Jens Granseuer

	* at-enable-dialog.glade:
	* at-properties.desktop.in.in: move capplet to main menu, was the
	only one under Accessibility and rename "Assistive Tecnologies".
	Using gnome-control-center will appead under Personal  (closes
	bug #515075).

2008-01-02  Denis Washington  <denisw@svn.gnome.org>

	* main.c: (cb_keyboard_preferences): Spawn the accessibility
	tab of the keyboard capplet instead of at-properties.

2007-11-26  Sebastien Bacher  <seb128@ubuntu.com>

	* main.c: (at_enable_update): enable the preferred applications button,
	  patch by Chris Jones (Closes: #499332)

2007-10-07  Luca Ferretti <elle.uca@libero.it>

	Fixes #484351

	* at-properties.desktop.in.in: don't use 'Preferences' word for
	application name.

2007-09-18  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Patrick Wade <patrick.wade@sun.com>

	* main.c: (close_logout_update), (setup_dialog): make logout button
	sensitive whenever accessibility settings have been enabled or
	disabled (closes bug #476921)

2007-06-02  Jens Granseuer  <jensgr@gmx.net>

	* at-startup-session.c:
	* at-startup-session.h: remove obsolete files
	* main.c: (at_enable_toggled): remove leftover bits from bug
	#386413 to make distcheck pass

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade:
	* main.c: (create_dialog): set button images via code instead of
	relying on glade, so they respect the gtk-button-images xsetting
	(closes bug #362880)

2007-05-05  Jens Granseuer  <jensgr@gmx.net>

	* at-enable-dialog.glade: fix critical warning

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>
